# project-pulse-he

./: Cargo.toml  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdvancedDashboard.tsx  ContactDialog.tsx  DesktopCompanionStatus.tsx  EnhancedProjectCard.tsx  EnhancedProjectForm.tsx  HybridModeDetector.tsx  Layout.tsx  PaymentStatusButton.tsx  PrioritySelector.tsx  ProjectDialog.tsx  ProjectTaskList.tsx  ProjectsSidebar.tsx  QuickTaskAdd.tsx  Sidebar.tsx  SmartSearchBar.tsx  StatusSelector.tsx  TagManager.tsx  TaskDialog.tsx  TaskTimer.tsx  TasksModal.tsx  TasksSidebar.tsx  TauriStatus.tsx  TopNavigation.tsx  VirtualizedList.tsx
src/components/projects/: ProjectStatCard.tsx  ProjectsHeader.tsx  QuickTasksPanel.tsx  RecentProjectsList.tsx  StatsGrid.tsx
src/components/ui/: chart.tsx  input-otp.tsx  toast.tsx
src/hooks/: use-toast.ts  useAdvancedSearch.ts  useAuth.ts  useDesktopCompanion.ts  useSupabaseSync.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: tauri.ts
src/pages/: Auth.tsx  Contacts.tsx  Dashboard.tsx  Projects.tsx  Tasks.tsx
src/services/: desktopCompanionService.ts  exportService.ts  nativeServices.ts  notificationService.ts  syncService.ts
src/store/: usePersonalTasksStore.ts  useProjectStore.ts
src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20250817174312_9fb90811-84ff-43f1-9633-d5ed0cb13ecc.sql  20250817174327_a678fb1d-2505-4de1-9928-412be8ece1ce.sql
