[package]
name = "project-pulse-he"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
tauri = { version = "1.5", features = [
  "api-all",
  "dialog-open",
  "fs-all",
  "shell-open",
  "shell-execute",
  "protocol-asset",
  "window-all",
  "macos-proxy"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
